fixed scroll freezing on mobile

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -11,7 +11,7 @@
 
 	.credentials,
 	.description {
-		max-width: 90%;
+		max-width: 100%;
 		font-size: 1.7rem;
 		color: #ffffff;
 		line-height: 3rem;
