--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,39 +1,50 @@
 .contact {
 	width: 50%;
+	@media only screen and (min-width: 320px) {
+		width: 100vw;
+		padding: 1rem;
+	}
 
 	ul {
 		margin: 5rem;
+		@media only screen and (min-width: 320px) {
+			margin: 0;
+		}
 
 		li {
 			list-style: none;
 			display: grid;
 			grid-template-columns: 0.5fr 1fr;
 			grid-gap: 1rem;
+		}
 
-			div {
-				font-size: 2rem;
-				padding: 1rem;
-				color: white;
-				font-weight: 200;
+		div {
+			font-size: 2rem;
+			padding: 1rem;
+			color: white;
+			font-weight: 200;
+		}
+
+		a,
+		a:link,
+		a:visited,
+		a:active {
+			color: #51bce7;
+			display: inline-block;
+			text-decoration: none;
+			font-size: 2rem;
+			font-weight: 400;
+			text-decoration: none;
+			padding: 1rem;
+			text-align: left;
+			outline: 0;
+
+			&:hover {
+				border-left: 1px solid #51bce7;
 			}
 
-			a,
-			a:link,
-			a:visited,
-			a:active {
-				color: #51bce7;
-				display: inline-block;
-				text-decoration: none;
-				font-size: 2rem;
-				font-weight: 400;
-				text-decoration: none;
-				padding: 1rem;
-				text-align: left;
-				outline: 0;
-
-				&:hover {
-					border-left: 1px solid #51bce7;
-				}
+			@media only screen and (min-width: 320px) {
+				padding: .5rem;
 			}
 		}
 	}
